# semsearch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SEMSEARCH-wiki.md  docker-compose.yml  pyproject.toml
.llm/.configs_for_mcp/: README.md
.llm/.configs_for_mcp/.claude-code/: .mcp.json
.llm/.configs_for_mcp/.cline/: mcp.json
.llm/.configs_for_mcp/.codex/: config.toml
.llm/.configs_for_mcp/.continue/mcpServers/: semsearch.yaml
.llm/.configs_for_mcp/.cursor/: mcp.json
.llm/.configs_for_mcp/.windsurf/: mcp_config.json
.llm/.configs_for_mcp/.zed/: settings.json
.llm/.configs_for_mcp/generic/: mcp-http.json
.llm/.skills_for_mcp/semsearch-mcp-for-llm/: SKILL.md
.llm/.skills_for_mcp/semsearch-mcp-for-llm/agents/: openai.yaml
config/: semsearch.yaml
semsearch/: __init__.py  cli.py  config.py  mcp.py  server.py
semsearch/fetch/: __init__.py  service.py
semsearch/search/: __init__.py  arxiv.py  bing.py  duckduckgo.py  engines.py  github.py  google.py  hackernews.py  qwant.py  service.py  startpage.py  wikipedia.py
