[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semsearch"
version = "1.0.0"
description = "SemSearch - local web search and fetch MCP service"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "platformdirs>=4.0.0",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.12",
    "pypdf>=5.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6.0",
]

[project.scripts]
semsearch = "semsearch.cli:main"
semsearch-server = "semsearch.server:main"

[tool.setuptools.packages.find]
include = ["semsearch*"]

[tool.setuptools.package-data]
semsearch = ["default_config.yaml"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
